--- a/templates/createContract.html
+++ b/templates/createContract.html
@@ -5,7 +5,7 @@
 <!-- Header -->
 <div class="row valign-wrapper">
     <div class="col m6">
-        <h4 class="headingCreateContract left" style="color:black"><i class="medium material-icons left"></i>Create a
+        <h4 class="headingCreateContract left" style="color:#e91e63"><i class="medium material-icons left"></i>Create a
             Contract</h4>
     </div>
     <div class="col m6">
@@ -453,7 +453,7 @@
         </div>
     </div>
 </div>
-</div>
+
 
 
 <!-- Scripts -->
