--- a/templates/listContracts.html
+++ b/templates/listContracts.html
@@ -2,432 +2,10 @@
 
 {% block body %}
 
-
-<!-- Modal for viewing the contract -->
-
-<!-- Modal Structure -->
-<div id="modal1" class="modal">
-  <div class="modal-content">
-    <h4>Contract Title</h4>
-    <div class="card">
-      <div class="card-tabs">
-        <ul class="tabs tabs-fixed-width tab-demo">
-          <li class="tab"><a class="active" href="#test1" style="color: black">Service Provider</a></li>
-          <li class="tab"><a style="color: black" href="#test2">Buyer</a></li>
-          <li class="tab"><a href="#test4" style="color: black">Services and Payment</a></li>
-          <li class="tab"><a href="#test6" style="color: black">Special Provisions</a></li>
-          <li class="tab"><a href="#test7" style="color: black">Final Details</a></li>
-        </ul>
-      </div>
-      <div class="card-content">
-        <div id="test1">
-          <h5>Service Provider Information</h5>
-          <br>
-
-          <div class="row">
-            <p> &nbsp &nbsp Who is providing the services?</p>
-            <div class="col s4">
-              <div class="input-field">
-
-                <input id="sfirst_name" placeholder="Enter First Name" type="text" class="validate">
-              </div>
-            </div>
-            <div class="col s4">
-              <div class="input-field">
-                <input id="smiddle_name" placeholder="Enter Middle Name" type="text" class="validate">
-              </div>
-            </div>
-            <div class="col s4">
-              <div class="input-field">
-                <input id="slast_name" placeholder="Enter Last Name" type="text" class="validate">
-              </div>
-            </div>
-          </div>
-          <div class="input-field">
-            <p>What is the service provider's address?</p>
-            <input id="sstreetAddress" placeholder="Enter Street Address" type="text" class="validate">
-          </div>
-          <div class="row">
-            <div class="col s4">
-              <div class="input-field">
-                <p>City</p>
-                <input id="scity" placeholder="Enter City" type="text" class="validate">
-              </div>
-            </div>
-            <div class="col s4">
-              <div class="input-field">
-                <p>State</p>
-                <input id="sstate" placeholder="Enter State" type="text" class="validate">
-              </div>
-            </div>
-            <div class="col s4">
-              <div class="input-field">
-                <p>Zip Code</p>
-                <input id="szipCode" placeholder="Enter zip code" type="text" class="validate">
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col s4">
-              <div class="input-field">
-                <p>Country</p>
-                <input id="scountry" placeholder="Enter Country" type="text" class="validate">
-              </div>
-            </div>
-            <div class="col s4">
-              <div class="input-field">
-                <p>Mobile Number</p>
-                <input id="smobileNumber" placeholder="Enter mobile number" type="text" class="validate">
-              </div>
-            </div>
-            <div class="col s4">
-              <div class="input-field">
-                <p>Zip Code</p>
-                <input id="szipCode" placeholder="Enter zip code" type="text" class="validate">
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col s12">
-              <button class="btn waves-effect waves-light right buttonToNextTab" id="test2-next" type="button"><a
-                  style="color:white">Next
-                  <i class="material-icons right">chevron_right</i></a>
-              </button>
-            </div>
-          </div>
-
-
-
-        </div>
-        <div id="test2">
-          <h5>Buyer Information</h5>
-          <br>
-
-          <div class="row">
-            <p> &nbsp &nbsp Who is purchasing the service?</p>
-            <div class="col s4">
-              <div class="input-field">
-
-                <input id="bfirst_name" placeholder="Enter First Name" type="text" class="validate">
-              </div>
-            </div>
-            <div class="col s4">
-              <div class="input-field">
-                <input id="bmiddle_name" placeholder="Enter Middle Name" type="text" class="validate">
-              </div>
-            </div>
-            <div class="col s4">
-              <div class="input-field">
-                <input id="blast_name" placeholder="Enter Last Name" type="text" class="validate">
-              </div>
-            </div>
-          </div>
-          <div class="input-field">
-            <p>What is the buyer's address?</p>
-            <input id="bstreetAddress" placeholder="Enter Street Address" type="text" class="validate">
-          </div>
-          <div class="row">
-            <div class="col s4">
-              <div class="input-field">
-                <p>City</p>
-                <input id="bcity" placeholder="Enter City" type="text" class="validate">
-              </div>
-            </div>
-            <div class="col s4">
-              <div class="input-field">
-                <p>State</p>
-                <input id="bstate" placeholder="Enter State" type="text" class="validate">
-              </div>
-            </div>
-            <div class="col s4">
-              <div class="input-field">
-                <p>Zip Code</p>
-                <input id="bzipCode" placeholder="Enter zip code" type="text" class="validate">
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col s4">
-              <div class="input-field">
-                <p>Country</p>
-                <input id="bcountry" placeholder="Enter Country" type="text" class="validate">
-              </div>
-            </div>
-            <div class="col s4">
-              <div class="input-field">
-                <p>Mobile Number</p>
-                <input id="bmobileNumber" placeholder="Enter mobile number" type="text" class="validate">
-              </div>
-            </div>
-            <div class="col s4">
-              <div class="input-field">
-                <p>Zip Code</p>
-                <input id="bzipCode" placeholder="Enter zip code" type="text" class="validate">
-              </div>
-            </div>
-          </div>
-          <div class="row valign-wrapper">
-            <div class="col s12">
-              <button class="btn waves-effect waves-light right buttonToNextTab" id="test4-next" type="button"><a
-                  style="color:white">Next
-                  <i class="material-icons right">chevron_right</i></a>
-              </button>
-              <button class="btn waves-effect waves-light left buttonToPrevTab" id="test1-prev" type="button"><a
-                  style="color:white">Prev
-                  <i class="material-icons right">chevron_left</i></a>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div id="test4">
-          <h5>Stages of Services</h5>
-          <br>
-          <div class="servicesInputList">
-            <div class="row">
-              <div class="col s4">
-                <div class="input-field">
-                  <p>Stage Id</p>
-                  <input id="stageId" placeholder="Enter Stage Id" type="text" class="validate">
-                </div>
-              </div>
-              <div class="col s4">
-                <div class="input-field">
-                  <p>Stage Name</p>
-                  <input id="stageName" placeholder="Enter stage Name" type="text" class="validate">
-                </div>
-              </div>
-              <div class="col s4">
-                <div class="input-field">
-                  <p>Stage Amount</p>
-                  <input id="stageAmount" placeholder="Enter stage amount" type="text" class="validate">
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col s12">
-
-                <div class="input-field">
-                  <p>Stage Description</p>
-                  <textarea placeholder="Enter Description" id="textarea1" class="materialize-textarea"></textarea>
-                </div>
-              </div>
-
-            </div>
-            <div class="row">
-              <div class="col s6">
-                <div class="input-field">
-                  <p>Start Date</p>
-                  <input id="dateOfStart" class="datepicker" placeholder="Enter start date" type="text"
-                    class="validate">
-                </div>
-              </div>
-              <div class="col s6">
-                <div class="input-field">
-                  <p>End Date</p>
-                  <input id="dateOfCompletion" class="datepicker" placeholder="Enter end date" type="text"
-                    class="validate">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row valign-wrapper">
-            <div class="col s4">
-              <button class="btn waves-effect waves-light left buttonToPrevTab" id="test2-prev" type="button"><a
-                  style="color:white">Prev
-                  <i class="material-icons right">chevron_left</i></a>
-              </button>
-
-
-            </div>
-            <div class="col s4 center-align">
-              <button class="btn waves-effect waves-light addStage" id="test-next" type="button"><a
-                  style="color:white">Add Another Stage
-                  <i class="material-icons right">add</i></a>
-              </button>
-            </div>
-            <div class="col s4">
-              <button class="btn waves-effect waves-light right buttonToNextTab " id="test6-next" type="button"><a
-                  style="color:white">Next
-                  <i class="material-icons right">chevron_right</i></a>
-              </button>
-            </div>
-
-
-          </div>
-        </div>
-
-        <div id="test6">
-
-          <div class="row">
-
-            <div class="col s12">
-              <h5>Right to Cancel</h5>
-              <br>
-              <p>Does the buyer have a statutory right to cancel the transaction?</p>
-              <p>
-                <label>
-                  <input class="with-gap" name="group3" type="radio" checked />
-                  <span style="color: black">Yes</span>
-                </label>
-              </p>
-              <p>
-                <label>
-                  <input class="with-gap" name="group3" type="radio" checked />
-                  <span style="color: black">No</span>
-                </label>
-              </p>
-            </div>
-          </div>
-          <br>
-          <br>
-
-          <div class="row">
-
-            <div class="col s12">
-              <h5>Additional Provisions</h5>
-              <br>
-              <p>Do you want to include any additional provisions?</p>
-              <p>
-                <label>
-                  <input class="with-gap" name="group1" type="radio" checked />
-                  <span style="color: black">Yes</span>
-                </label>
-              </p>
-              <p>
-                <label>
-                  <input class="with-gap" name="group1" type="radio" checked />
-                  <span style="color: black">No</span>
-                </label>
-              </p>
-              <br>
-              <div class="input-field">
-                <p>Describe additional provisions</p>
-                <textarea placeholder="Use Complete Sentences" id="additionalProvisions"
-                  class="materialize-textarea"></textarea>
-              </div>
-            </div>
-          </div>
-          <div class="row valign-wrapper">
-            <div class="col s6">
-              <button class="btn waves-effect waves-light left buttonToPrevTab" id="test4-prev" type="button"><a
-                  style="color:white">Prev
-                  <i class="material-icons right">chevron_left</i></a>
-              </button>
-            </div>
-            <div class="col s6">
-              <button class="btn waves-effect waves-light right buttonToNextTab " id="test7-next" type="button"><a
-                  style="color:white">Next
-                  <i class="material-icons right">chevron_right</i></a>
-              </button>
-            </div>
-          </div>
-        </div>
-
-        <div id="test7">
-          <div class="row">
-            <div class="col s12">
-              <h5>Disputes</h5>
-              <br>
-              <p>In the event a dispute arises, how will it be resolved?</p>
-              <p>
-                <label>
-                  <input class="with-gap" name="disputesRadio" type="radio" checked />
-                  <span style="color: black">Court litigation</span>
-                </label>
-              </p>
-              <p>
-                <label>
-                  <input class="with-gap" name="disputesRadio" type="radio" checked />
-                  <span style="color: black">Arbitration</span>
-                </label>
-              </p>
-              <p>
-                <label>
-                  <input class="with-gap" name="disputesRadio" type="radio" checked />
-                  <span style="color: black">mediation</span>
-                </label>
-              </p>
-              <p>
-                <label>
-                  <input class="with-gap" name="disputesRadio" type="radio" checked />
-                  <span style="color: black">mediation then arbitration</span>
-                </label>
-              </p>
-            </div>
-          </div>
-          <br>
-          <div class="row">
-            <div class="col s12">
-              <h5>Assignment</h5>
-              <br>
-              <p>Does either party need written permission to assign its rights to a third party?</p>
-              <p>
-                <label>
-                  <input class="with-gap" name="assignmentRadio" type="radio" checked />
-                  <span style="color: black">No</span>
-                </label>
-              </p>
-              <p>
-                <label>
-                  <input class="with-gap" name="assignmentRadio" type="radio" checked />
-                  <span style="color: black">Yes, the buyer</span>
-                </label>
-              </p>
-              <p>
-                <label>
-                  <input class="with-gap" name="assignmentRadio" type="radio" checked />
-                  <span style="color: black">Yes, the service provider</span>
-                </label>
-              </p>
-              <p>
-                <label>
-                  <input class="with-gap" name="assignmentRadio" type="radio" checked />
-                  <span style="color: black">Yes, both the buyer and the service provider</span>
-                </label>
-              </p>
-            </div>
-          </div>
-          <br>
-          <h5>Dates Of Contract</h5>
-          <div class="row">
-            <div class="col s6">
-              <div class="input-field">
-                <p>Start Date</p>
-                <input id="dateOfContract" class="datepicker" placeholder="Enter start date" type="text"
-                  class="validate">
-              </div>
-            </div>
-            <div class="col s6">
-              <div class="input-field">
-                <p>End Date</p>
-                <input id="dateOfExpiry" class="datepicker" placeholder="Enter end date" type="text" class="validate">
-              </div>
-            </div>
-          </div>
-          <div class="row valign-wrapper">
-            <div class="col s6">
-              <button class="btn waves-effect waves-light left buttonToPrevTab" id="test6-prev" type="button"><a
-                  style="color:white">Prev
-                  <i class="material-icons right">chevron_left</i></a>
-              </button>
-            </div>
-            <div class="col s6">
-              <button class="btn waves-effect waves-light right submitContract" type="button"><a
-                  style="color:white">Submit
-                  <i class="material-icons right"></i></a>
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
 <!-- Header -->
 <div class="row valign-wrapper">
   <div class="col m6">
-    <h4 class="headingListContract left" style="color:black"><i class="medium material-icons left"></i>Your
+    <h4 class="headingListContract left" style="color:#e91e63"><i class="medium material-icons left"></i>Your
       Contracts</h4>
   </div>
   <div class="col m6">
@@ -438,51 +16,18 @@
   </div>
 </div>
 
+<!-- Preloader -->
+<div class="progress">
+  <div class="indeterminate"></div>
+</div> 
 
+<!-- List of the Contract -->
 <ul class="collection z-depth-1">
-  <li class="collection-item">
 
-    <span class="title contractTitleList"><b>Contract Title</b></span> &nbsp
-    <div class="chip right">Total Amount</div>
-    <div class="chip right">See Details</div>
-    <p style="color: grey">Service Provider Name <br>
-      Buyer Name
-    </p>
-
-  </li>
-  <li class="collection-item">
-
-    <span class="title contractTitleList"><b>Contract Title</b></span> &nbsp
-    <div class="chip right">Total Amount</div>
-    <div class="chip right">See Details</div>
-    <p style="color: grey">Service Provider Name <br>
-      Buyer Name
-    </p>
-
-  </li>
-  <li class="collection-item">
-
-    <span class="title contractTitleList"><b>Contract Title</b></span> &nbsp
-    <div class="chip right">Total Amount</div>
-    <div class="chip right">See Details</div>
-    <p style="color: grey">Service Provider Name <br>
-      Buyer Name
-    </p>
-
-  </li>
-  <li class="collection-item">
-
-    <span class="title contractTitleList"><b>Contract Title</b></span> &nbsp
-    <div class="chip right">Total Amount</div>
-    <div class="chip right">See Details</div>
-    <p style="color: grey">Service Provider Name <br>
-      Buyer Name
-    </p>
-
-  </li>
 </ul>
 
 
 <!-- Scripts -->
+<script type="text/javascript"  src="{{url_for('static', filename='js/main.js')}}"></script>
 <script type="text/javascript" src="{{url_for('static', filename='js/listContract.js')}}"></script>
 {% endblock %}
