--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -17,7 +17,7 @@
     <br>
     <li><a class="subheader"  style="color:black">
       <div class="preloader-wrapper big active currentLoggedInLoader">
-      <div class="spinner-layer spinner-black">
+      <div class="spinner-layer spinner-red">
         <div class="circle-clipper left">
           <div class="circle"></div>
         </div><div class="gap-patch">
