--- a/templates/uploadcard.html
+++ b/templates/uploadcard.html
@@ -26,5 +26,6 @@
         
     </div>
 </form>
+<script type="text/javascript"  src="{{url_for('static', filename='js/main.js')}}"></script>
 
 {% endblock %}
