--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -36,6 +36,21 @@
     <li class="subheader1 createPath"><a class="subheader1a" href="/create" ><i class="material-icons black-text text-darken-4">add</i>Make a contract</a></li>
     <li class="subheader1 historyPath"><a class="subheader1a" href="/history"> <i class="material-icons black-text text-darken-4">update</i>Blockchain History</a></li>
     <li class="subheader1 settingsPath"><a class="subheader1a" href="/settings"> <i class="material-icons black-text text-darken-4">settings</i>Settings</a></li>
+
+    
+    <li class="loader-li">
+      <div class="preloader-wrapper small active loader">
+      <div class="spinner-layer spinner-red">
+        <div class="circle-clipper left">
+          <div class="circle"></div>
+        </div><div class="gap-patch">
+          <div class="circle"></div>
+        </div><div class="circle-clipper right">
+          <div class="circle"></div>
+        </div>
+      </div>
+    </div>
+  </li>
 </ul>
 
     
