--- a/templates/viewContract.html
+++ b/templates/viewContract.html
@@ -15,7 +15,6 @@
 
 
 <div class="card">
-    
     <div class="card-content">
         <div id="test1">
             <h5 style="color:#e91e63">Service Provider Information</h5>
@@ -160,7 +159,7 @@
             <h5 style="color:#e91e63">Stages of Services</h5>
             <br>
             <div class="servicesInputList">
-                <ul class="collection stagesInViewForm">
+                <ul class="collection stagesInViewForm card">
                 </ul>
             </div>
         </div>
