--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -32,6 +32,7 @@
     
 
     <!-- All the Navigations links -->
+    <li class="subheader1 typesPath"><a class="subheader1a" href="/types" > <i class="material-icons black-text text-darken-4">filter_none</i>Types of contract</a></li>
     <li class="subheader1 Path"><a class="subheader1a" href="/" > <i class="material-icons black-text text-darken-4">import_contacts</i>Your Contracts</a></li>
     <li class="subheader1 createPath"><a class="subheader1a" href="/create" ><i class="material-icons black-text text-darken-4">add</i>Make a contract</a></li>
     <li class="subheader1 historyPath"><a class="subheader1a" href="/history"> <i class="material-icons black-text text-darken-4">update</i>Blockchain History</a></li>
